--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Noto+Sans:wght@400;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -10,314 +8,159 @@
   text-decoration: none;
   font-style: normal;
   white-space: normal;
-  word-break: break-all;
+  word-break: keep-all;
   vertical-align: top;
+  letter-spacing: -0.025em;
 }
-
 button {
   outline: none;
   cursor: pointer;
   border: none;
   background: none;
-  font-family: "Montserrat", sans-serif;
   vertical-align: top;
   display: inline-block;
-}
-
-input {
-}
-
-input:focus {
-  ouline: none;
-  border: none;
-}
-
-input::-webkit-input-placeholder {
-  color: #aeaeae;
-}
-
-input:-ms-input-placeholder {
-  color: #aeaeae;
-}
-
-textarea::-webkit-input-placeholder {
-  color: #aeaeae;
-}
-
-textarea:-ms-input-placeholder {
-  color: #aeaeae;
-}
-
-select {
-  background-size: 12px;
-  background-position-x: 95%;
-  border-radius: 0;
-  border: solid 1px #f2f3f5;
-  outline: none;
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  padding: 0 10px;
   font-family: "Montserrat", sans-serif;
-  color: #111;
-  font-size: 15px;
-  -webkit-appearance: none;
+}
+input {
+  font-family: "Noto Sans", sans-serif;
+  color: #222;
+  appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
-  appearance: none;
-  vertical-align: top;
 }
 
-select::-ms-expand {
-  display: none;
+textarea:focus,
+input:focus,
+input[type]:focus,
+.uneditable-input:focus {
+  border: solid 1px #6ba6f9;
+  outline: 0 none;
 }
-
-select:focus {
-  border: solid 1px #ff6001;
-  background-size: 12px;
-  background-position-x: 95%;
+input::-webkit-input-placeholder {
+  color: #bfbfbf;
 }
-
+input::-moz-placeholder {
+  color: #bfbfbf;
+}
+input:-ms-input-placeholder {
+  color: #bfbfbf;
+}
+input::-ms-input-placeholder {
+  color: #bfbfbf;
+}
+input::placeholder {
+  color: #bfbfbf;
+}
 textarea {
-  width: 100%;
-  height: 80px;
-  background: #f2f3f5;
-  border-radius: 0;
-  border: solid 1px #f2f3f5;
-  outline: none;
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  font-family: "Montserrat", sans-serif;
-  color: #111;
-  font-size: 15px;
-  padding: 8px 10px;
-  line-height: 24px;
+  font-family: "Noto Sans", sans-serif;
+  color: #222;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
 }
-
 textarea:focus {
-  border: solid 1px #ff6001;
-  background: #fff;
+  outline: none;
+  border: none;
 }
-
-/*header style*/
+/* header style */
 .headerWrap {
   width: 100%;
-  background: rgba(255, 255, 255, 0);
+  height: 60px;
+  padding: 7px 0;
   position: absolute;
   top: -1px;
   left: 0;
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  z-index: 100;
-  border-bottom: solid 1px rgba(255, 255, 255, 0.5);
 }
 .headerInner {
-  max-width: 1580px;
-  min-width: 280px;
-  height: 70px;
+  max-width: 1320px;
+  padding: 0 20px;
   margin: 0 auto;
-  padding: 12px 20px;
-  position: relative;
 }
 .headerInner .logo {
-  position: absolute;
-  left: 20px;
-  top: 12px;
+  width: 60px;
+  height: 45px;
 }
-.headerInner .logo a {
+.headerInner .logo h1 a {
   display: block;
   width: 100%;
-  height: 100%;
-}
-
-.logoImg {
-  display: inline-block;
-  width: 45px;
   height: 45px;
-  background: url("../img/coin.svg") center no-repeat;
+  background: url(../img/logoTop.svg) left no-repeat;
   background-size: contain;
-  margin-right: 14px;
 }
-.logoText {
-  display: inline-block;
-  font-size: 30px;
-  letter-spacing: -0.025em;
-  line-height: 45px;
-  font-family: "Montserrat", sans-serif;
-  color: #fff;
-  font-weight: 400;
-}
-.logoText span {
-  color: #ffcd00;
-  font-weight: 700;
-}
-.lnb {
-  display: inline-block;
-}
-.headerRight {
-  position: absolute;
-  right: 20px;
-  top: 12px;
-}
-.sns {
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  margin-right: 10px;
-  display: inline-block;
-  -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-}
-.sns.twitter {
-  background: url("../img/twitter.svg") #fff center no-repeat;
-  background-size: 25px;
-}
-.sns.gmail {
-  background: url("../img/google.svg") #fff center no-repeat;
-  background-size: 25px;
-}
-.sns > a {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-.guide {
-  height: 45px;
-  border-radius: 22.5px;
-  background: #fff;
-  display: inline-block;
-  -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-}
-.guide .iconGuide {
-  width: 25px;
-  height: 25px;
-  vertical-align: top;
-  display: inline-block;
-  background: url("../img/guide.svg") #fff left no-repeat;
-  background-size: contain;
-  margin-right: 10px;
-}
-.guide a {
-  display: inline-block;
-  vertical-align: top;
-  background-size: 25px;
-  line-height: 25px;
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
-  color: #222;
-  font-weight: 600;
-  width: 100%;
-  height: 100%;
-  padding: 10px 20px;
-}
-.moNav {
-  display: none;
-  text-align: right;
+/* footer style */
+.footerWrap {
+  background: #414d5e;
+  padding: 60px 0 80px 0;
+  min-width: 280px;
   position: relative;
 }
-.moNav .lnb {
-  position: absolute;
-  top: 70px;
-  right: 0;
-  width: 300px;
-  text-align: right;
-}
-.iconMenu {
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  display: inline-block;
-  background: url("../img/iconHamburger.svg") #fff center no-repeat;
-  background-size: 25px;
-  -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-}
-.iconClose {
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  display: inline-block;
-  background: url("../img/iconClose.svg") #fff center no-repeat;
-  background-size: 20px;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.moMenu {
-  display: none;
-}
-/*footer style*/
-.footerWrap {
+.footerLine {
   width: 100%;
-  background: #222222;
+  height: 60px;
+  position: absolute;
+  top: -50px;
+  background: url(../img/footerTop.svg) bottom repeat-x;
+  background-size: 605px;
+}
+.footerTop {
+  width: 100%;
 }
 .footerArea {
-  max-width: 1580px;
+  max-width: 1320px;
   min-width: 280px;
+  padding: 0 20px;
   margin: 0 auto;
-  padding: 70px 20px;
 }
-.footerArea address {
-  line-height: 24px;
-  font-family: "Montserrat", sans-serif;
+.logoArea {
+  display: inline-block;
+}
+.logoBottom {
+  width: 144px;
+  height: 30px;
+  background: url("../img/logoTop.svg") left no-repeat;
+  background-size: contain;
+  display: inline-block;
+  margin-bottom: 10px;
+}
+.footerIcon {
+  float: right;
+}
+.sns {
+  width: 30px;
+  height: 30px;
+  margin-left: 10px;
+  display: inline-block;
+}
+.sns.gmail {
+  background: url("../img/iconGmail.svg") center no-repeat;
+  background-size: contain;
+}
+.sns.twitter {
+  background: url("../img/iconTwitter.svg") center no-repeat;
+  background-size: contain;
+}
+.sns.discord {
+  background: url("../img/iconDiscord.svg") center no-repeat;
+  background-size: contain;
+}
+
+address {
   font-size: 14px;
-  color: #fff;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
-}
-::-moz-selection {
-  background: #ffcd00;
   color: #fff;
 }
 
-::selection {
-  background: #ffcd00;
-  color: #fff;
-}
-@media all and (max-width: 767px) {
-  .logoText {
-    font-size: 26px;
+@media all and (max-width: 374px) {
+  .footerIcon {
+    float: inherit;
+    margin-bottom: 10px;
   }
-  .moNav {
-    display: inline-block;
-  }
-  .pcNav {
-    display: none;
-  }
-  .logoImg {
+  .sns {
+    margin-left: 0px;
     margin-right: 10px;
   }
-}
-@media all and (max-width: 470px) {
-  .logoText {
-    font-size: 18px;
-  }
-}
-@media all and (max-width: 374px) {
-  .logoText {
-    font-size: 14px;
-    line-height: 30px;
-  }
-  .logoImg {
-    width: 30px;
-    height: 30px;
-  }
-  .iconMenu {
-    width: 30px;
-    height: 30px;
-    background-size: 20px;
-  }
-  .headerInner {
-    height: 54px;
-  }
-  .iconClose {
-    width: 30px;
-    height: 30px;
-    background-size: 14px;
-  }
-  .moNav .lnb {
-    top: 60px;
+  address {
+    font-size: 12px;
   }
 }
