--- a/src/styles/css/index.scss
+++ b/src/styles/css/index.scss
@@ -159,7 +159,7 @@
   .contentsTitle {
     width: 100%;
     text-align: center;
-    color: #11aa8b;
+    color: #222;
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     letter-spacing: -0.025em;
@@ -180,7 +180,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 21px;
-    word-break: keep-all;
+    word-break: break-all;
     span {
       font-weight: 700;
       font-size: 14px;
