햄버거메뉴

--- a/src/styles/css/index.scss
+++ b/src/styles/css/index.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
   background: -o-linear-gradient(150deg, #103a69, #678cc9, #75ccff);
   background: linear-gradient(300deg, #103a69, #678cc9, #75ccff);
-  position: relative;
+  // position: relative;
   .mainBg {
     width: 100%;
     min-width: 280px;
