--- a/src/styles/css/header.scss
+++ b/src/styles/css/header.scss
@@ -1,219 +1,378 @@
-@import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
-/*header style*/
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Noto+Sans:wght@400;700&display=swap");
 .headerWrap {
+  height: 65px;
   width: 100%;
-  background: rgba(255, 255, 255, 0);
-  position: absolute;
+  min-width: 280px;
+  position: fixed;
   top: -1px;
   left: 0;
+  z-index: 100;
+  background: rgba(255, 255, 255, 0);
+  -webkit-box-shadow: 0px 5px 10px rgba(17, 170, 139, 0);
+  box-shadow: 0px 5px 10px rgba(17, 170, 139, 0);
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  z-index: 100;
-}
-.headerInner {
-  max-width: 1580px;
-  min-width: 280px;
-  height: 70px;
-  margin: 0 auto;
-  padding: 12px 20px;
-  position: relative;
-}
-.headerInner .logo {
-  position: absolute;
-  left: 20px;
-  top: 12px;
-}
-.headerInner .logo a {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
 
-.logoImg {
-  display: inline-block;
-  width: 45px;
-  height: 45px;
-  background: url(../img/logoTop.svg) center no-repeat;
-  background-size: contain;
-  margin-right: 14px;
-}
-.logoText {
-  display: inline-block;
-  font-size: 30px;
-  letter-spacing: -0.025em;
-  line-height: 45px;
-  font-family: "Montserrat", sans-serif;
-  color: #fff;
-  font-weight: 400;
-}
-.logoText span {
-  color: #ffcd00;
-  font-weight: 700;
-}
-.lnb {
-  display: inline-block;
-}
-.headerRight {
-  position: absolute;
-  right: 20px;
-  top: 12px;
-}
-.sns {
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  margin-right: 10px;
-  display: inline-block;
-  -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-}
-.sns.twitter {
-  background: url("../img/twitter.svg") rgba(255, 255, 255, 0.2) center no-repeat;
-  background-size: 25px;
-}
-.sns.gmail {
-  background: url("../img/google.svg") rgba(255, 255, 255, 0.2) center no-repeat;
-  background-size: 25px;
-}
-.sns > a {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-.guide {
-  margin-right: 10px;
-  border-radius: 22.5px;
-  display: inline-block;
-  -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-}
+  .headerBox {
+    max-width: 1320px;
+    min-width: 280px;
+    padding: 0 20px;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+  }
+  .logoArea {
+    padding: 10px 0;
+    height: 65px;
+    width: -webkit-fit-content;
+    width: fit-content;
+    width: -moz-fit-content;
 
-.guide a {
-  display: inline-block;
-  vertical-align: top;
-  background-size: 25px;
-  line-height: 25px;
-  font-family: "Montserrat-Medium", sans-serif;
-  font-size: 16px;
-  color: #ffff;
-  background: rgba(255, 255, 255, 0.2);
-  width: 100%;
-  height: 100%;
-  padding: 10px 20px;
-}
-.moNav {
-  text-align: right;
-  position: relative;
-}
-.moNav .lnb {
-  position: absolute;
-  top: 70px;
-  right: 0;
-  width: 300px;
-  text-align: right;
-}
-.iconMenu {
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  display: inline-block;
-  background: url("../img/iconHamburger.svg") #fff center no-repeat;
-  background-size: 25px;
-  -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-}
-.iconClose {
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  display: inline-block;
-  background: url("../img/iconClose.svg") #fff center no-repeat;
-  background-size: 20px;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.moMenu {
-  display: none;
-}
+    .logoTop {
+      width: 50px;
+      height: 45px;
+      background: url("../img/logoW.svg") left no-repeat;
+      background-size: auto 30px;
+      display: inline-block;
+      -webkit-transition: all 0.2s ease-in-out;
+      -o-transition: all 0.2s ease-in-out;
+      transition: all 0.2s ease-in-out;
+    }
+    .logoTitle {
+      display: inline-block;
+      line-height: 45px;
+      color: #fff;
+      font-weight: 400;
+      letter-spacing: -0.025em;
+      font-size: 26px;
+      -webkit-transition: all 0.2s ease-in-out;
+      -o-transition: all 0.2s ease-in-out;
+      transition: all 0.2s ease-in-out;
+      span {
+        font-weight: 700;
+      }
+    }
+  }
 
-.moCon {
-  width: 200px;
-  border-radius: 30px;
+  .lnbArea {
+    height: 60px;
+    padding: 7px 0;
+    .btnLnb {
+      padding: 0 30px;
+      line-height: 43px;
+      color: #fff;
+      font-size: 15px;
+      font-family: "Montserrat", sans-serif;
+      font-weight: 400;
+      -webkit-transition: all 0.2s ease-in-out;
+      -o-transition: all 0.2s ease-in-out;
+      transition: all 0.2s ease-in-out;
+      position: relative;
+      .lnbBorder {
+        width: 100%;
+        height: 2px;
+        background: rgba(255, 255, 255, 0);
+        -webkit-transition: all 0.2s ease-in-out;
+        -o-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+      }
+      .moSubmenu {
+        display: none;
+        position: absolute;
+        top: 45px;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+        background: #fff;
+        width: 160px;
+        padding: 20px 0;
+        -webkit-box-shadow: 0px 2px 5px rgba(17, 170, 139, 0.1);
+        box-shadow: 0px 2px 5px rgba(17, 170, 139, 0.1);
+
+        .subLnb {
+          width: 100%;
+          display: block;
+          font-size: 14px;
+          line-height: 26px;
+          text-align: center;
+          padding: 0 20px;
+          color: #7f7f7f;
+          font-weight: 400;
+          -webkit-transition: all 0.2s ease-in-out;
+          -o-transition: all 0.2s ease-in-out;
+          transition: all 0.2s ease-in-out;
+        }
+        .subLnb:hover {
+          color: #222;
+          font-weight: 700;
+        }
+      }
+
+      .submenu {
+        display: none;
+        position: absolute;
+        top: 45px;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+        background: #fff;
+        width: 160px;
+        padding: 20px 0;
+        border-radius: 10px;
+        -webkit-box-shadow: 0px 0px 10px rgba(17, 170, 139, 0.15);
+        box-shadow: 0px 0px 10px rgba(17, 170, 139, 0.15);
+        button {
+          width: 100%;
+          display: block;
+          font-size: 14px;
+          line-height: 30px;
+          text-align: center;
+          padding: 0 20px;
+          color: #222;
+          font-weight: 400;
+          -webkit-transition: all 0.2s ease-in-out;
+          -o-transition: all 0.2s ease-in-out;
+          transition: all 0.2s ease-in-out;
+        }
+        button:hover {
+          color: #11aa8b;
+        }
+        a {
+          color: #222;
+          -webkit-transition: all 0.2s ease-in-out;
+          -o-transition: all 0.2s ease-in-out;
+          transition: all 0.2s ease-in-out;
+        }
+        a:hover {
+          color: #11aa8b;
+        }
+      }
+    }
+    .btnLnb:hover .submenu {
+      display: block;
+    }
+    .btnLnb:hover {
+      color: #11aa8b;
+      .lnbBorder {
+        background: #11aa8b;
+      }
+    }
+
+    .btnLogin {
+      padding: 0 20px;
+      background: #11aa8b;
+      line-height: 45px;
+      color: #fff;
+      border-radius: 23px;
+      font-weight: 700;
+      font-size: 15px;
+      margin-left: 20px;
+    }
+  }
+  .moLnbWrap {
+    display: none;
+
+    .moMenu {
+      width: 60px;
+      height: 60px;
+      background: url("../img/iconMenuW.svg") center no-repeat;
+      background-size: 22px;
+    }
+    .moMenuWrap,
+    .moSearchWrap {
+      position: fixed;
+      z-index: 101;
+      width: 100%;
+      height: 100vh;
+      top: 0;
+      left: 0;
+      background: #11aa8b;
+      padding: 0 20px;
+      .moTop {
+        width: 100%;
+        height: 60px;
+        position: relative;
+        margin-bottom: 40px;
+        padding: 7px 0;
+
+        .logoTop {
+          width: 50px;
+          height: 45px;
+          background: url("../img/logoW.svg") left no-repeat;
+          background-size: auto 30px;
+          display: inline-block;
+          -webkit-transition: all 0.2s ease-in-out;
+          -o-transition: all 0.2s ease-in-out;
+          transition: all 0.2s ease-in-out;
+        }
+        .logoTitle {
+          display: inline-block;
+          line-height: 45px;
+          color: #fff;
+          font-weight: 400;
+          letter-spacing: -0.025em;
+          font-size: 26px;
+          -webkit-transition: all 0.2s ease-in-out;
+          -o-transition: all 0.2s ease-in-out;
+          transition: all 0.2s ease-in-out;
+          span {
+            font-weight: 700;
+          }
+        }
+
+        .btnClose {
+          width: 45px;
+          height: 60px;
+          background: url("../img/iconCloseW.svg") center no-repeat;
+          background-size: 22px;
+          position: absolute;
+          top: 0;
+          right: 0;
+        }
+      }
+      .btnLnb {
+        display: block;
+        width: 100%;
+        font-size: 20px;
+        line-height: 30px;
+        font-weight: 700;
+        color: #fff;
+        margin-bottom: 40px;
+        text-align: left;
+        .rotate {
+          width: 10px;
+          height: 30px;
+          background: url("../img/iconDownW.svg") center no-repeat;
+          background-size: contain;
+          display: inline-block;
+          -webkit-transform: rotate(180deg);
+          -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+          -webkit-transition: all 0.1s ease-in-out;
+          -o-transition: all 0.1s ease-in-out;
+          transition: all 0.1s ease-in-out;
+        }
+        .rotate2 {
+          width: 10px;
+          height: 30px;
+          background: url("../img/iconDownW.svg") center no-repeat;
+          background-size: contain;
+          display: inline-block;
+          -webkit-transform: rotate(360deg);
+          -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
+          -webkit-transition: all 0.1s ease-in-out;
+          -o-transition: all 0.1s ease-in-out;
+          transition: all 0.1s ease-in-out;
+        }
+      }
+      .lnbMypage {
+        margin-bottom: 30px;
+      }
+      .moSubmenu {
+        margin-top: -30px;
+        margin-bottom: 30px;
+        .subLnb {
+          display: block;
+          color: #f0f6ff;
+          font-size: 15px;
+          line-height: 30px;
+        }
+      }
+    }
+  }
+
+  .moLnbWrap.menu {
+    display: none;
+  }
+}
+.headerWrap:hover,
+.headerActive {
   background: #fff;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 10px;
-  display: block;
-  vertical-align: top;
-  margin-top: 10px;
-  text-align: left;
-  -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 2px 5px rgba(0, 0, 139, 0.1);
+  box-shadow: 0px 2px 5px rgba(17, 170, 139, 0.1);
+  position: fixed;
+  top: -1px;
+  left: 0;
+  .logoArea .logoTop {
+    background: url("../img/logoG.svg") left no-repeat;
+    background-size: auto 30px;
+  }
+  .logoArea .logoTitle {
+    color: #11aa8b;
+  }
+  .lnbArea .btnLnb {
+    color: #7f7f7f;
+  }
+  .lnbArea .btnLnb:hover {
+    color: #11aa8b;
+  }
+  .moLnbWrap .moMenu {
+    background: url("../img/iconMenuG.svg") center no-repeat;
+    background-size: 22px;
+  }
+}
+@media all and (max-width: 1099px) {
+  .headerWrap {
+    .lnbArea {
+      .btnLnb {
+        padding: 0 20px;
+      }
+    }
+  }
+}
+@media all and (max-width: 1023px) {
+  .headerWrap {
+    height: 60px;
+    .logoArea {
+      height: 60px;
+      padding: 15px 0;
+      .logoTop {
+        width: 50px;
+        height: 30px;
+      }
+      .logoTitle {
+        line-height: 30px;
+        font-size: 20px;
+      }
+    }
+    .lnbArea {
+      display: none;
+    }
+    .moLnbWrap {
+      display: block;
+      .menu {
+        display: inline-block;
+      }
+    }
+  }
 }
 
-.moCon .guide {
-  box-shadow: none;
+@media all and (max-width: 767px) {
+  .headerWrap {
+    .moLnbWrap {
+      .moMenu {
+        width: 45px;
+      }
+    }
+  }
 }
-
-.moCon .guide .guideItemTop {
-  display: inline-block;
-  vertical-align: top;
-  background-size: 25px;
-  line-height: 25px;
-  font-family: "Montserrat-Medium", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  width: 100%;
-  height: 100%;
-  font-weight: 700;
-  color: #222;
-}
-
-.moCon .guide .guideItem {
-  display: inline-block;
-  vertical-align: top;
-  background-size: 25px;
-  line-height: 25px;
-  font-family: "Montserrat-Medium", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  width: 100%;
-  height: 100%;
-  padding: 5px 10px;
-  color: #222;
-}
-
-.moSns {
-  width: 200px;
-  height: 45px;
-  border-radius: 30px;
-  background: #fff;
-  padding: 10px 30px;
-  display: block;
-  vertical-align: top;
-  margin-top: 10px;
-  text-align: center;
-  -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
-}
-
-.moSns > a {
-  border-radius: 50%;
-  width: 25px;
-  height: 20px;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.moSns .twitter {
-  background-size: contain;
-  margin-right: 20px;
-}
-
-.moSns .gmail {
-  background-size: contain;
+@media all and (max-width: 374px) {
+  .headerWrap .moLnbWrap .moMenu {
+    width: 45px;
+  }
+  .headerWrap .logoArea .logoTitle {
+    font-size: 14px;
+  }
 }
