--- a/src/styles/css/index.scss
+++ b/src/styles/css/index.scss
@@ -91,7 +91,7 @@
     font-size: 0;
     text-align: center;
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -146,11 +146,10 @@
     font-size: 40px;
     line-height: 40px;
     margin-bottom: 20px;
-    margin-top: 60px;
     word-break: keep-all;
-    span {
-      font-size: 26px;
-    }
+  }
+  .contentsTitle > span {
+    font-size: 26px;
   }
   .contnetsText {
     width: 100%;
@@ -160,10 +159,13 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 21px;
-    word-break: break-all;
+    word-break: keep-all;
     span {
       font-weight: 700;
       font-size: 14px;
+      word-break: break-all;
+    }
+    div {
       word-break: break-all;
     }
   }
@@ -206,7 +208,7 @@
   width: 100%;
   margin-top: 40px;
   font-size: 0;
-  text-align: center;
+  text-align: left;
 }
 .cardArea {
   width: 20%;
@@ -219,7 +221,7 @@
     width: 100%;
     background: #fff;
     border-radius: 20px;
-    padding: 20px;
+    padding: 10px;
     -webkit-transition: all 0.15s ease-in-out;
     -o-transition: all 0.15s ease-in-out;
     transition: all 0.15s ease-in-out;
@@ -246,14 +248,137 @@
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
   }
+  .collectionImg {
+    width: 100%;
+    position: relative;
+    img {
+      max-width: 100%;
+      border-radius: 15px;
+    }
+    .example {
+      position: absolute;
+      top: -1px;
+      right: -1px;
+      width: 100%;
+      height: 100%;
+      background: url(../img/example.png) center no-repeat;
+      background-size: 100%;
+      border-radius: 15px;
+      overflow: hidden;
+    }
+  }
 }
-// .cardArea:hover button {
-//   -webkit-transform: scale(1.02);
-//   -ms-transform: scale(1.02);
-//   transform: scale(1.02);
-//   -webkit-box-shadow: 0px 0px 20px rgba(129, 180, 158, 0.5);
-//   box-shadow: 0px 0px 20px rgba(129, 180, 158, 0.5);
-// }
+
+.blank {
+  width: 100%;
+  height: 100px;
+}
+.openTitle {
+  font-size: 20px;
+  margin-top: 10px;
+}
+.openSubtitle {
+  font-size: 16px;
+  margin-top: 10px;
+  color: #d1ddef;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: inline-block;
+  text-align: center;
+  span {
+    color: #fff;
+  }
+}
+.btnBuy {
+  padding: 0 60px;
+  background: #11aa8b;
+  color: #fff;
+  border-radius: 30px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 60px;
+  -webkit-box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.26);
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.26);
+  margin-top: 20px;
+  -webkit-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+.btnPreparing {
+  padding: 0 60px;
+  background: #8da099;
+  border-radius: 30px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 60px;
+  color: #fff;
+  -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.16);
+  margin-top: 20px;
+  -webkit-transition: all 0.15s ease-in-out;
+  -o-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+.btnBuy:hover {
+  background: #11aa8b;
+  color: #fff;
+  -webkit-box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.26);
+  box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.26);
+}
+.mainCount {
+  margin-top: 20px;
+  .countTitle {
+    letter-spacing: -0.025em;
+    font-family: "Montserrat", sans-serif;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 700;
+  }
+}
+.counter {
+  color: #fff;
+  display: inline-block;
+  font-weight: 100;
+  text-align: center;
+  font-size: 30px;
+  font-family: "Montserrat", sans-serif;
+  margin-top: 10px;
+}
+.counter > div {
+  border-radius: 5px;
+  display: inline-block;
+  margin-right: 10px;
+  span {
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.1);
+    display: inline-block;
+    min-width: 60px;
+    font-weight: 400;
+    line-height: 40px;
+    color: #fff;
+    border-radius: 50%;
+  }
+}
+.counter .smallText {
+  padding-top: 5px;
+  font-size: 10px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  text-align: center;
+}
+.counterDate {
+  margin-bottom: 30px;
+  letter-spacing: -0.025em;
+  line-height: 1.71;
+  font-family: "Montserrat", sans-serif;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  margin-top: 10px;
+}
 
 @media all and (max-width: 1800px) {
   .main {
@@ -269,11 +394,13 @@
 }
 
 @media all and (max-width: 1319px) {
-  .main {
-    height: 549px;
-    .mainBg {
-      height: 550px;
+  .main2 {
+    height: 600px;
+    .mainBg2 {
+      height: 601px;
     }
+  }
+  .main {
     .mainTitle {
       font-size: 45px;
     }
@@ -290,7 +417,7 @@
     }
     .mainWrap {
       position: absolute;
-      top: 100px;
+      top: 130px;
       left: 0;
       width: 100%;
       -webkit-transform: translate(0);
@@ -306,6 +433,22 @@
   .cardArea {
     width: 25%;
   }
+  .countTitle {
+    font-size: 20px;
+  }
+  .counter {
+    font-size: 20px;
+  }
+  .counter div > span {
+    min-width: 50px;
+    line-height: 30px;
+  }
+  .counter .smallText {
+    font-size: 10px;
+  }
+  .counterDate {
+    font-size: 14px;
+  }
 }
 @media all and (max-width: 1023px) {
   .cardArea {
@@ -315,13 +458,13 @@
 @media all and (max-width: 767px) {
   .main {
     .mainImgLeft {
-      width: 400px;
-      height: 400px;
+      width: 450px;
+      height: 450px;
     }
     .mainImgRight {
       background-position: right bottom;
-
-      top: 50px;
+      bottom: 250px;
+      top: auto;
     }
     .mainLogo {
       height: 45px;
@@ -329,15 +472,18 @@
     .mainTitle {
       font-size: 30px;
     }
+    .btnBuy,
+    .btnPreparing {
+      font-size: 16px;
+      line-height: 45px;
+      padding: 0 30px;
+    }
   }
-  .wrapGreen .contentsWrap .contentsTitle {
-    margin-top: 50px;
-  }
+
   .contentsWrap {
     max-width: 100%;
     padding: 10px 20px 100px 20px;
     .contentsTitle {
-      margin-top: 20px;
       font-size: 30px;
       line-height: 30px;
       span {
@@ -354,16 +500,22 @@
   }
   .cardArea {
     width: 50%;
+    padding: 5px;
+    button {
+      padding: 5px;
+    }
+  }
+  .blank {
+    height: 50px;
   }
 }
+
 @media all and (max-width: 530px) {
   .main {
     .mainImgLeft {
       width: 100%;
       height: 300px;
+      bottom: 40px;
     }
-  }
-  .cardArea {
-    width: 100%;
   }
 }
